@@ -34,7 +34,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $OpenBSD: ssh.1,v 1.176 2003/09/29 11:40:51 jmc Exp $
+.\" $OpenBSD: ssh.1,v 1.177 2003/10/08 08:27:36 jmc Exp $
 .Dd September 25, 1999
 .Dt SSH 1
 .Os
@@ -621,7 +621,6 @@ For full details of the options listed below, and their possible values, see
 .It ConnectionAttempts
 .It ConnectionTimeout
 .It DynamicForward
-.It EnableSSHKeysign
 .It EscapeChar
 .It ForwardAgent
 .It ForwardX11
